--- a/PROD/CONF/spark-compute-mkt-kpi-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-mkt-kpi-cron-tasks.conf
@@ -26,7 +26,7 @@ crontasks +=
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      {"param" : "--master yarn --executor-cores 6 --num-executors 8 --driver-memory 6G --executor-memory 8G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
       , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
       , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
@@ -421,7 +421,7 @@ crontasks +=
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      {"param" : "--master yarn --executor-cores 6 --num-executors 8 --driver-memory 6G --executor-memory 8G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
       , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
       , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
@@ -487,14 +487,14 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_DAILY",
-    cron = "0 15/20 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily.conf",
     taskType = "BATCH",
     taskQueue = "compute",
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      {"param" : "--master yarn --executor-cores 5 --num-executors 5 --driver-memory 5G --executor-memory 5G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
       , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
       , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
@@ -511,7 +511,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_KPI_DG_AGREGATIONS_SUPP_REG_INCONNUE",
-    cron = "0 20/20 * * * ?",
+    cron = "0 */20 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-daily-supp-reg-inconnue.conf",
     taskType = "BATCH",
     taskQueue = "compute",
@@ -594,7 +594,7 @@ crontasks +=
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      {"param" : "--master yarn --executor-cores 5 --num-executors 5 --driver-memory 5G --executor-memory 5G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
       , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
       , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
