--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -4556,7 +4556,7 @@ crontasks +=
 //    ]
 //  }
 
-crontasks +=
+//crontasks +=
 //  {
 //    instanceId = "LOAD_SPARK_FT_BDI_ART",
 //    cron = "0 */10 * * * ?",
