--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-in-commercial-region-final.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-agregations-in-commercial-region-final.conf
@@ -17,7 +17,7 @@ flux.name = "LOAD_SPARK_KPI_DG_AGREGATIONS_IN_COMMERCIAL_REGION_FINAL"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value =-14
+flux.slice-begin-value =-7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
@@ -28,7 +28,7 @@ select  if(count(*)=7,'OK','NOK')
 
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT where SOURCE_TABLE = 'FT_REFILL' and TRANSACTION_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct PROCESSING_DATE from AGG.SPARK_KPIS_DG_FINAL where GRANULARITE_REG = 'COMMERCIAL_REGION' and PROCESSING_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = false
 flux.slice-filter-query = """
@@ -36,7 +36,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT where SOURCE_TABLE = 'FT_REFILL' and TRANSACTION_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct PROCESSING_DATE from AGG.SPARK_KPIS_DG_FINAL where GRANULARITE_REG = 'COMMERCIAL_REGION' and PROCESSING_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
