--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-otarie-data-trafic.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT_V2/compute-spark-kpi-otarie-data-trafic.conf
@@ -17,26 +17,26 @@ flux.name = "LOAD_SPARK_KPI_MKT_V2_FT_OTARIE_DATA_TRAFIC"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value =-14
+flux.slice-begin-value =-7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=false
 flux.slice-state-query="""
-select  if(count(*)=142,'OK','NOK')
+select  if(count(*)=7,'OK','NOK')
 
 from dim.dt_dates
-where datecode between date_sub(current_date, 142) and date_sub(current_date, 1)
-    and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where SOURCE_TABLE = 'FT_OTARIE_DATA_TRAFFIC_DAY' and TRANSACTION_DATE between date_sub(current_date, 142) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where JOB_NAME = 'COMPUTE_KPI_OTARIE_DATA_TRAFFIC' and TRANSACTION_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = false
 flux.slice-filter-query = """
 select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
-where datecode between date_sub(current_date, 142) and date_sub(current_date, 1)
-    and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where SOURCE_TABLE = 'FT_OTARIE_DATA_TRAFFIC_DAY' and TRANSACTION_DATE between date_sub(current_date, 142) and date_sub(current_date, 1))
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT_DG where JOB_NAME = 'COMPUTE_KPI_OTARIE_DATA_TRAFFIC' and TRANSACTION_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
