--- a/PROD/CONF/BDI/load-spark-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-bdi.conf
@@ -45,6 +45,11 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
+flux.inline.exec-queries +="alter table cdr.spark_it_bdi drop partition(original_file_date='###SLICE_VALUE###')"
+flux.inline.exec-queries +="alter table cdr.spark_it_bdi_ligne_flotte drop partition(original_file_date='###SLICE_VALUE###')"
+flux.inline.exec-queries +="alter table cdr.spark_it_bdi_pers_morale drop partition(original_file_date='###SLICE_VALUE###')"
+flux.inline.exec-queries +="alter table cdr.spark_it_bdi_full1 drop partition(original_file_date='###SLICE_VALUE###')"
+
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/IT/BDI_FINALE/prequery_spark_it_bdi.hql"
 flux.inline.exec-queries +="TRUNCATE TABLE TMP.tt_gap_bdi_hlr"
