--- a/PROD/CONF/BDI/load-spark-ft-a-bdi.conf
+++ b/PROD/CONF/BDI/load-spark-ft-a-bdi.conf
@@ -44,6 +44,8 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.inline.exec-queries +="alter table AGG.SPARK_FT_A_BDI drop partition(event_date='###SLICE_VALUE###')"
+
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_A_BDI/prequery_spark_ft_a_bdi.hql"
 flux.inline.exec-queries +="truncate table TMP.TT_MULTISIMS"
