--- a/PROD/CONF/BDI/load-spark-ft-b2b-re.conf
+++ b/PROD/CONF/BDI/load-spark-ft-b2b-re.conf
@@ -13,7 +13,7 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 
-flux.name = "LOAD_SPARK_FT_BDI_B2B"
+flux.name = "LOAD_SPARK_FT_BDI_B2B_RE"
 
 flux.has-date-processing = true
 
@@ -28,7 +28,7 @@ flux.slice-state-query="""
 select  if(count(*)=7,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from mon.spark_ft_bdi_b2b where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from mon.spark_ft_bdi_b2b_re where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -36,7 +36,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from mon.spark_ft_bdi_b2b where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from mon.spark_ft_bdi_b2b_re where event_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
@@ -45,19 +45,19 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/prequery_spark_ft_bdi_b2b.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/prequery_spark_ft_bdi_b2b_re.hql"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS fn_format_msisdn_to_9digits"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 
-flux.inline.exec-queries +="truncate table TMP.tt_flotte1"
-flux.inline.exec-queries +="truncate table TMP.tt_flotte2"
-flux.inline.exec-queries +="truncate table TMP.tt_flotte3"
-flux.inline.exec-queries +="truncate table TMP.tt_flotte4"
-flux.inline.exec-queries +="truncate table TMP.tt_flotte01"
-flux.inline.exec-queries +="truncate table TMP.tt_flotte02"
-flux.inline.exec-queries +="truncate table TMP.tt_pm01"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte1_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte2_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte3_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte4_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte01_re"
+flux.inline.exec-queries +="truncate table TMP.tt_flotte02_re"
+flux.inline.exec-queries +="truncate table TMP.tt_pm01_re"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
@@ -67,11 +67,11 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte01.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte02.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_pm01.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte1.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte3.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_tt_flotte4.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B/insert_into_spark_ft_bdi_b2b.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte01_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte02_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_pm01_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte1_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte2_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte3_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_tt_flotte4_re.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_B2B_RE/insert_into_spark_ft_bdi_b2b_re.hql"
