--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -1245,7 +1245,7 @@ crontasks += {
 
 crontasks += {
   instanceId = "SQ_EXPORT_FT_CALL_NEW_CUSTOMER_SERVICE",
-  cron = "0 34 * * * ?",
+  cron = "30 30 */1 * * ?",
   configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-call-new-customer-service.conf",
   taskType = "SQOOP",
   taskQueue = "compute",
