--- a/PROD/CONF/BDI/load-spark-ft-a-bdi-b2b.conf
+++ b/PROD/CONF/BDI/load-spark-ft-a-bdi-b2b.conf
@@ -13,7 +13,7 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 
-flux.name = "LOAD_SPARK_FT_ZSMART_CONF"
+flux.name = "LOAD_SPARK_FT_A_BDI_B2B"
 
 flux.has-date-processing = true
 
@@ -28,7 +28,7 @@ flux.slice-state-query="""
 select  if(count(*)=10,'OK','NOK')
 from dim.dt_dates
 where datecode between date_sub(current_date, 10) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from MON.SPARK_FT_ZSMART_CONF where event_date between date_sub(current_date, 10) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from AGG.SPARK_FT_A_BDI_B2B where event_date between date_sub(current_date, 10) and date_sub(current_date, 1))
 """
 flux.slice-has-filter-query = true
 flux.slice-filter-query = """
@@ -36,7 +36,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 10) and date_sub(current_date, 1)
-    and datecode in (select distinct event_date from MON.SPARK_FT_ZSMART_CONF where event_date between date_sub(current_date, 10) and date_sub(current_date, 1))
+    and datecode in (select distinct event_date from AGG.SPARK_FT_A_BDI_B2B where event_date between date_sub(current_date, 10) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
@@ -45,25 +45,16 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_ZSMART_CONF/prequery_spark_ft_zsmart_conf.hql"
-
-flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS fn_format_msisdn_to_9digits"
-flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION fn_format_msisdn_to_9digits as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-
-flux.inline.exec-queries +="truncate table TMP.TT_ZSMART1A"
-flux.inline.exec-queries +="truncate table TMP.TT_ZSMART1B"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_A_BDI_B2B/prequery_spark_ft_a_bdi_b2b.hql"
 
 
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
+flux.inline.exec-qCueries += "SET hive.exec.reducers.max=16"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_ZSMART_CONF/insert_into_tt_zsmart1a.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_ZSMART_CONF/insert_into_tt_zsmart1b.hql"
-flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_ZSMART_CONF/insert_into_spark_ft_zsmart_conf.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/BDI/FT_A_BDI_B2B/insert_into_spark_ft_a_bdi_b2b.hql"
