--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-bdi.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-bdi.conf
@@ -8,8 +8,8 @@ flux.type = "EXPORT"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -1
-flux.slice-end-value = -1
+flux.slice-begin-value = -2
+flux.slice-end-value = -2
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -19,7 +19,7 @@ flux.rdms.has-pre-queries = true
 
 flux.hive.has-pre-queries = true
 
-flux.rdms.pre-exec-queries += """truncate table BDI_TEST.TT_BDI_PP"""
+
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 (SELECT COUNT(*) NBR FROM BDI_TEST.FT_BDI_SQ_PP WHERE event_date = to_date('###SLICE_VALUE###','yyyy-mm-dd'))
@@ -36,9 +36,11 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
 flux.sqoop.query = "SELECT * FROM MON.SPARK_FT_BDI_1A WHERE EVENT_DATE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "BDI_TEST.TT_BDI_PP"
+flux.sqoop.export-rdms.staging-table = "BDI_TEST.SQ_BDI_PP"
 flux.sqoop.export-rdms.dest-table = "BDI_TEST.FT_BDI_SQ_PP"
 flux.sqoop.export-hive.staging-table = "TT_FT_BDI_PP"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="--update-key=MSISDN"
+flux.sqoop.extra-params +="--update-mode=allowinsert"
