--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -9268,6 +9268,9 @@ crontasks +=
     , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
   ]
 }
+
+
+  crontasks +=
   {
     instanceId = "LOAD_CTI_SHORT_NUMBERS_STATS",
     cron = "0 10 * * * ?",
@@ -9275,9 +9278,9 @@ crontasks +=
     taskType = "BATCH",
     taskQueue = "compute",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
+    timeout = "300 minutes"
     extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 10G --executor-memory 10G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
       , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
       , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
@@ -9290,6 +9293,7 @@ crontasks +=
       , {"param" : "--class cm.orange.processor.BatchScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
     ]
   }
+
 
   crontasks +=
   {
